k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      containers:
      - args:
        - ./dockerize
        - -wait
        - tcp://database:27017
        - -timeout
        - 5m
        - python
        - main.py
        image: localhost:5000/flanks/api:1.0
        imagePullPolicy: ""
        name: api
        ports:
        - containerPort: 6501
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
