k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: database
    spec:
      containers:
      - env:
        - name: ADDRESS
          valueFrom:
            configMapKeyRef:
              key: ADDRESS
              name: environment-env
        - name: DB_NAME
          valueFrom:
            configMapKeyRef:
              key: DB_NAME
              name: environment-env
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DB_PASSWORD
              name: environment-env
        - name: DB_USER
          valueFrom:
            configMapKeyRef:
              key: DB_USER
              name: environment-env
        - name: FETCH_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: FETCH_HOSTNAME
              name: environment-env
        - name: FETCH_PATH
          valueFrom:
            configMapKeyRef:
              key: FETCH_PATH
              name: environment-env
        - name: JWT_SECRET
          valueFrom:
            configMapKeyRef:
              key: JWT_SECRET
              name: environment-env
        - name: KEYS_DIR
          valueFrom:
            configMapKeyRef:
              key: KEYS_DIR
              name: environment-env
        - name: MONGO_INITDB_ROOT_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MONGO_INITDB_ROOT_PASSWORD
              name: environment-env
        - name: MONGO_INITDB_ROOT_USERNAME
          valueFrom:
            configMapKeyRef:
              key: MONGO_INITDB_ROOT_USERNAME
              name: environment-env
        - name: PYTHONUNBUFFERED
          valueFrom:
            configMapKeyRef:
              key: PYTHONUNBUFFERED
              name: environment-env
        - name: SHEET_ID
          valueFrom:
            configMapKeyRef:
              key: SHEET_ID
              name: environment-env
        image: mongo:4.4.0-bionic
        imagePullPolicy: ""
        name: database
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: database-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: database-claim0
        persistentVolumeClaim:
          claimName: database-claim0
status: {}
