k8s/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: queue
  name: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: queue
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: queue
    spec:
      containers:
      - image: rabbitmq:3.8.6
        imagePullPolicy: ""
        name: queue
        ports:
        - containerPort: 5672
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
