k8s/database-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: database
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/database: "true"
  podSelector:
    matchLabels:
      io.kompose.network/database: "true"
