k8s/default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: default
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/default: "true"
