k8s/queue-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: queue
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/queue: "true"
  podSelector:
    matchLabels:
      io.kompose.network/queue: "true"
